--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,8 @@
     <string name="about_nav">About</string>
     <string name="my_profile_nav">My Profile</string>
     <string name="edit_profile_nav">Edit Profile</string>
-    <string name="movies_nav">Movies</string>
+    <string name="movies_genre_nav">Movies</string>
+    <string name="movies_nav">Movie list</string>
     <string name="games_nav">Games</string>
 
     <!--about strings-->
