added to buttons to MoviesFragment.java/layout to display popular and top rated movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,10 @@ Kutaiba></string>
     <string name="movie_image_desc">Here goes the movie poster</string>
     <string name="ratting">Ratting</string>
     <string name="r_year">Release Year</string>
+
+    <!--Movies fragment strings-->
     <string name="search">search</string>
+    <string name="popular_button">Popular</string>
+    <string name="top_button">Top rated</string>
 
 </resources>
