implemented getAllNowPlaying from API to layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,6 @@ Kutaiba></string>
     <string name="search">search</string>
     <string name="popular_button">Popular</string>
     <string name="top_button">Top rated</string>
+    <string name="now_button">Now playing</string>
 
 </resources>
