dummy comment section added to SingleMovieFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,7 @@ Kutaiba></string>
     <string name="movie_image_desc">Here goes the movie poster</string>
     <string name="ratting">Ratting</string>
     <string name="r_year">Release Year</string>
+    <string name="comment">Leave a comment</string>
 
     <!--Movies fragment strings-->
     <string name="search">search</string>
