--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,5 +96,7 @@ Kutaiba></string>
     <string name="top_button">Top rated</string>
     <string name="now_button">Now playing</string>
     <string name="up_button">Upcoming</string>
+    <string name="the_app_was_made_possible_with_the_help_of">The app was made possible with the help of:</string>
+    <string name="tmdb">TMDB</string>
 
 </resources>
