--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="edit_profile_nav">Edit Profile</string>
     <string name="movies_nav">Movies</string>
     <string name="single_movie_nav">Movie</string>
-    <string name="tv_show_nav">Tv Show</string>
+    <string name="tv_show_nav">Tv Shows</string>
+    <string name="tv_show_nav_s">Tv Show</string>
 
     <!--about strings-->
     <string name="createor_image_disc">creator image</string>
