--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="about_nav">About</string>
     <string name="my_profile_nav">My Profile</string>
     <string name="edit_profile_nav">Edit Profile</string>
-    <string name="movies_main_nav">Movies main</string>
-    <string name="movies_nav">Movies</string>
+    <string name="movies_main_nav">Movies</string>
+    <string name="popular_movies_nav">Popular Movies</string>
     <string name="single_movie_nav">Movie</string>
     <string name="tv_show_nav">Tv Shows</string>
     <string name="tv_show_nav_s">Tv Show</string>
