--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="edit_profile_nav">Edit Profile</string>
     <string name="movies_main_nav">Movies</string>
     <string name="popular_movies_nav">Popular Movies</string>
+    <string name="top_rated_movies">Top Rated Movies</string>
     <string name="single_movie_nav">Movie</string>
     <string name="tv_show_nav">Tv Shows</string>
     <string name="tv_show_nav_s">Tv Show</string>
