--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="on_air_tv_show_nav">On Air Tv Shows</string>
     <string name="airing_today_tv_show_nav">Airing today Tv Shows</string>
     <string name="tv_show_nav_s">Tv Show</string>
+    <string name="search_movie_nav">Search movies</string>
 
     <!--about strings-->
     <string name="createor_image_disc">creator image</string>
