--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="tv_show_nav_s">Tv Show</string>
     <string name="search_movie_nav">Search movies</string>
     <string name="search_tv_show_nav">Search tv shows</string>
+    <string name="game_nave">Games</string>
 
     <!--about strings-->
     <string name="createor_image_disc">creator image</string>
