setup recyclerview for production_companies in single movie fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@ Kutaiba></string>
     <string name="movie_collection">Collection</string>
     <string name="movie_budget">Budget</string>
     <string name="movie_revenue">Revenue</string>
+    <string name="production_companies">Production Companies</string>
 
     <!--Movies fragment strings-->
     <string name="search">search</string>
