settings fragment setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,8 @@ Kutaiba></string>
 
     <!--Error-->
     <string name="not_found">SOMETHING WENT WRONG; TRY LATER</string>
+
+    <!--settings-->
+    <string name="theme_key">Theme</string>
+    <string name="theme_title">Change theme</string>
 </resources>
