moved the settings from menu til drawer (gmail-like design)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
 
     <!--navbar strings-->
     <string name="group_title">Navigation</string>
+    <string name="util_group_title">util</string>
     <string name="create_profile_nav">Create account</string>
     <string name="login_nav">Login</string>
     <string name="about_nav">About</string>
