--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="single_free_game_nave">Free to play</string>
     <string name="all_games_nave">All games</string>
     <string name="single_game_nave">Single games</string>
+    <string name="search_game_nave">search games</string>
     <string name="tv_season">Tv Seasons</string>
 
     <!--about strings-->
