--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="airing_today_tv_show_nav">Airing today Tv Shows</string>
     <string name="tv_show_nav_s">Tv Show</string>
     <string name="search_movie_nav">Search movies</string>
+    <string name="fav_movie_nav">Favorite movies</string>
     <string name="search_tv_show_nav">Search tv shows</string>
     <string name="game_nave">Games</string>
     <string name="single_free_game_nave">Free to play</string>
