--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="nav_header_title">Multiverse of Geeks</string>
     <string name="nav_header_subtitle">The best library out there</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string name="action_sign_out">Sign out</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
