Dark mode settings added and working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,6 @@ Kutaiba></string>
     <string name="not_found">SOMETHING WENT WRONG; TRY LATER</string>
 
     <!--settings-->
-    <string name="dark_theme_key">Dark Theme</string>
+    <string name="dark_theme_key">dark_theme</string>
     <string name="theme_title">Change theme</string>
 </resources>
