--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,7 @@ Kutaiba></string>
     <!--single movie strings-->
     <string name="movie_image_desc">Here goes the movie poster</string>
     <string name="ratting">Ratting</string>
+    <string name="myapp_ratting">Geek Ratting</string>
     <string name="popularity">Popularity</string>
     <string name="r_year">Release Year</string>
     <string name="comment">Leave a comment</string>
