--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,11 @@
     <string name="theme_title_settings">Dark Theme</string>
 
     <!--create_profile strings-->
-    <string name="f_name">First Name</string>
-    <string name="l_name">Last Name</string>
+    <string name="f_name">Full Name</string>
     <string name="u_name">User Name</string>
     <string name="email">E-mail</string>
+    <string name="phone">Phone</string>
+    <string name="email_hint">example@provider.com</string>
     <string name="password">Password</string>
     <string name="r_password">Repeat Password</string>
     <string name="term_checkbox">I agree to terms of service</string>
@@ -105,7 +106,9 @@ Kutaiba></string>
     <string name="gender_hint">Gender</string>
     <string name="age_header">Age</string>
     <string name="save_button">Save Changes</string>
-    <string name="cancel_button">Cancel</string>
+    <string name="reset_button">Reset Password</string>
+    <string name="delete_button">Delete Account</string>
+    <string name="Sign_out">Sign Out</string>
 
     <!--home fragment strings-->
     <string name="home_text">PLACEHOLDER!!!</string>
